# shell

./: .gitignore  BUILD.bazel  Delay.go  Delay_test.go  MODULE.bazel  README.md  SigTerm.go  WORKSPACE  cover.out  go.mod  sonar-project.properties
.github/workflows/: build.yml
execute/: BUILD  Execute.go  Execution.go  ExecutionError.go  Execution_test.go
